--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/a.out",
+            "program": "${workspaceFolder}/exefile/${fileBasenameNoExtension}.out",//"${workspaceRoot}/exefile/a.out",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/exefile",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
