--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
             "args": [
                 "${file}",
                 "-g",
-                // "${fileBasenameNoExtension}.out"
+                "-o",
+                "\"${workspaceFolder}/exefile/${fileBasenameNoExtension}.out\"",
             ],
             "group": {
                 "kind": "build",
