week6 lab2 problem1.1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "iosfwd": "cpp",
         "ostream": "cpp",
         "stdexcept": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "xstring": "cpp",
+        "queue": "cpp"
     }
 }
