--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,26 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
-            "type": "shell",
+            "label": "build",
             "command": "g++",
             "args": [
                 "${file}",
-                "-g",
                 "-o",
-                "\"${workspaceFolder}/exefile/${fileBasenameNoExtension}.out\"",
+                "\"${workspaceFolder}/exefile/${fileBasenameNoExtension}.exe\""
             ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "type": "shell"
+        },
+        {
+            "label": "build-debug",
+            "command": "g++",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "\"${workspaceFolder}/exefile/${fileBasenameNoExtension}-debug.exe\""
+            ],
+            "type": "shell"
         }
     ]
 }
