--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "ctime": "cpp",
         "xutility": "cpp",
         "xtree": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "list": "cpp"
     }
 }
