--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
         "xutility": "cpp",
         "xtree": "cpp",
         "memory": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "xhash": "cpp",
+        "unordered_map": "cpp"
     }
 }
