--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,10 @@
         "list": "cpp",
         "xhash": "cpp",
         "unordered_map": "cpp",
-        "xmemory0": "cpp"
+        "xmemory0": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "random": "cpp",
+        "type_traits": "cpp"
     }
 }
