--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,8 @@
         "deque": "cpp",
         "initializer_list": "cpp",
         "random": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "iomanip": "cpp",
+        "ios": "cpp"
     }
 }
